--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Build
-on:[workflow_dispatch]
+on: [push,pull_request]
+
 jobs:
+  # Build job. Builds app for Android with Buildozer
   build-android:
     name: Build for Android
     runs-on: ubuntu-latest
@@ -14,8 +16,10 @@ jobs:
         id: buildozer
         with:
           workdir: .
+          buildozer_version: stable
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: package-privachat
+          name: package
           path: ${{ steps.buildozer.outputs.filename }}
