Cleaned Build Every bug fixed!!!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           workdir: .
           buildozer_version: stable
+          command: buildozer android release
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
